--- a/02_CSS/html/01_CSS개요_선택자1.html
+++ b/02_CSS/html/01_CSS개요_선택자1.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 
-<body>
+<>
   <h1>CSS(Cascading Style Sheets)</h1>
 
   <pre>
@@ -148,6 +148,7 @@
       A선택자 * { CSS 코드; }
     </code>
   </pre>
+  <br><br><a href=".">실습폴더 목록</a>
 </body>
 
 </html>
