--- a/02_CSS/html/02_CSS선택자2.html
+++ b/02_CSS/html/02_CSS선택자2.html
@@ -173,7 +173,7 @@
   <input type="checkbox" id="check1">
   <label for="check1"></label>
 
-
+  <br><br><a href=".">실습폴더 목록</a>
 </body>
 
 </html>
