--- a/02_CSS/html/05_CSS선택자5.html
+++ b/02_CSS/html/05_CSS선택자5.html
@@ -98,6 +98,6 @@
    <a href="https://flukeout.github.io/">선택자 연습 게임</a>
    <a href="선택자연습게임답.html">답지</a>
 
-
+   <br><br><a href=".">실습폴더 목록</a>
 </body>
 </html>
