--- a/01_HTML/01_글자관련태그.html
+++ b/01_HTML/01_글자관련태그.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	body 태크 : 화면(브라우저)에 보여질 내용을 작성하는 태그
+	body 태그 : 화면(브라우저)에 보여질 내용을 작성하는 태그
 	<!-- hr(horizon) : 수평선 -->
 	<hr>
 	<hr>
@@ -79,9 +79,11 @@
 
 	<p> 글을 작성하는 용도의 태그 </p>
 
-	<p> pre 태그처럼 형식이 유지되진 않음 </p>
+	<p> pre 태그처럼 형식이 
+		유지되진           않음 </p>
 
 	<p> 다른 문단, 태그 사이에 여백이 생성됨 </p>
+	<pre>aaa</pre><p>aaa</p><pre>aaddd</pre><pre>aasdasd</pre>
 
 	<hr><hr><hr>
 
@@ -145,6 +147,7 @@
 		</p>
 
 	</p>
-
+	
+  <br><br><a href=".">실습폴더 목록</a>
 </body>
 </html>						<!-- html 종료 태그 -->
