--- a/01_HTML/02_목록관련태그.html
+++ b/01_HTML/02_목록관련태그.html
@@ -82,6 +82,26 @@
 
 	<h1>목록 중첩</h1>
 
+	<!-- ul>li*2>ul>li{A$}*4 -->
+	<ul>
+		<li>
+			<ul>
+				<li>A1</li>
+				<li>A2</li>
+				<li>A3</li>
+				<li>A4</li>
+			</ul>
+		</li>
+		<li>
+			<ul>
+				<li>A1</li>
+				<li>A2</li>
+				<li>A3</li>
+				<li>A4</li>
+			</ul>
+		</li>
+	</ul>
+	
 	<ul>
 		<li>
 			분식
@@ -102,6 +122,7 @@
 			</ol>
 		</li>
 	</ul>
-
+	
+  <br><br><a href=".">실습폴더 목록</a>
 </body>
 </html>
