--- a/01_HTML/06_이미지관련태그.html
+++ b/01_HTML/06_이미지관련태그.html
@@ -83,6 +83,7 @@
      <img src="images/flowers/flower4.jpg" alt="꽃 1번 이미지" width="25%" height="100%">
 
   </div>
-
+	
+  <br><br><a href=".">실습폴더 목록</a>
 </body>
 </html>
