--- a/01_HTML/07_영역관련태그.html
+++ b/01_HTML/07_영역관련태그.html
@@ -104,7 +104,7 @@
   <h2>block VS inline : 크기 지정 가능 여부 확인</h2>
   
   <!-- block은 크기 적용 O -->  <!-- div.red.box -->
-  <div class="red box">div</div>
+  <div class="red box">div</div>  <!-- 맨 위에 style로 박스 크기를 지정하였음. span에는 적용되지못함-->
 
   <!-- inline은 크기 적용 X --> <!-- span.yellow.box -->
   <span class="yellow box">span</span>
@@ -181,7 +181,7 @@
 
     위 둘을 섞은 형식 == inline-block
 
-    - 대표적인 태그 : imf iframe
+    - 대표적인 태그 : img iframe
   </pre>
 
   <img src="images/cats/cat2.jpg" width="300px" height="240px">
@@ -195,7 +195,7 @@
   </pre>
   <iframe src="06_이미지관련태그.html" frameborder="0"></iframe>
 
-  <!-- 이거 다시해볼것
+  <!-- 이거 다시해볼것-->
    <iframe width="480" 
           height="270" 
           src="https://www.youtube.com/embed/phuiiNCxRMg" 
@@ -213,7 +213,8 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
           referrerpolicy="strict-origin-when-cross-origin" 
           allowfullscreen></iframe>
-  -->
-
+  <!---->
+	
+  <br><br><a href=".">실습폴더 목록</a>
 </body>
 </html>
