--- a/01_HTML/10_폼관련태그.html
+++ b/01_HTML/10_폼관련태그.html
@@ -86,7 +86,8 @@
     type="submit" : 제출 버튼을 만들 때 사용
                     (button 태그의 기본 값 == type 속성을 작성하지 않으면 자동으로 submit 지정)
 
-  </pre>
+  </pre>	
+  
+  <br><br><a href=".">실습폴더 목록</a>
 </body>
-
 </html>
