--- a/01_HTML/04_표관련태그.html
+++ b/01_HTML/04_표관련태그.html
@@ -169,9 +169,9 @@
   <table border="1" id="tb3">
     <!-- tr*3>th*5{$}  + ctrl + space -->
     <tr>  <!-- 1행 -->
-      <th colspan="3">1(3열 병합)</th>
+      <th colspan="3">1(3열 병합 col)</th>
       <th>2</th>
-      <th rowspan="3">3(3행 병합)</th>
+      <th rowspan="3">3(3행 병합 row)</th>
     </tr>
 
     <tr>  <!-- 2행 -->
@@ -195,6 +195,7 @@
   </table>
 
   <!-- 복잡한 구조의 테이블에서는 rowspan, colspan이 적용되지 않는 경우도 있다 -->
-
+	
+  <br><br><a href=".">실습폴더 목록</a>
 </body>
 </html>
