--- a/01_HTML/08_하이퍼링크관련태그.html
+++ b/01_HTML/08_하이퍼링크관련태그.html
@@ -113,7 +113,7 @@
     <img src="images/flowers/flower5.jpg" width="200px" height="100px">
   </a>
 
-
+	
+  <br><br><a href=".">실습폴더 목록</a>
 </body>
-
 </html>
